--- a/aula10/package.json
+++ b/aula10/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "author": "Katia Winkert",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "date-fns": "^2.28.0"
   }
