--- a/aula10/package.json
+++ b/aula10/package.json
@@ -1,12 +1,15 @@
 {
   "name": "aula10",
   "version": "1.0.0",
-  "description": "Projeto para aprendizado de pacotes",
+  "description": "Projeto para aprendizado inicial",
   "main": "index.js",
   "author": "Katia Winkert",
   "license": "MIT",
   "type": "module",
   "dependencies": {
     "date-fns": "^2.28.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
