--- a/aula10/package.json
+++ b/aula10/package.json
@@ -10,6 +10,6 @@
     "date-fns": "^2.28.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node --experimental-json-modules index.js"
   }
 }
