--- a/exercicio.json/package.json
+++ b/exercicio.json/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "aula10",
+  "name": "exercicio.json",
   "version": "1.0.0",
-  "description": "Projeto para aprendizado inicial",
+  "description": "Atividade Crie projeto usando yarn",
   "main": "index.js",
   "author": "Katia Winkert",
   "license": "MIT",
   "type": "module",
   "dependencies": {
     "date-fns": "^2.28.0"
-  },
-  "scripts": {
-    "start": "node index.js"
   }
 }
